Complete authentication doc
